# misc-patterns

./: README.md
cascade-sorted/: CMakeLists.txt  main.cpp
producer-consumer/: CMakeLists.txt  main.cpp
